--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="section__text">
       <!-- <p class="section__text__p1">Hello, I'm</p> -->
       <h1 style="font-family:Segoe Print;">Hello, I'm</h1>
-      <h1 class="title">Ambuj Nayan Mishra</h1>
+      <h1 class="title">Ambuj Mishra</h1>
       <p style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue; font-size: 30px; color: black;">Data
         Analyst</p><br>
       <div class="btn-container">
