--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
     </div>
   </section>
   <section id="about">
-    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; font-size: 20px;">Get
+    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue; font-size: 20px;">Get
       To Know More</p>
-    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; ">About Me</h1>
+    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">About Me</h1>
     <div class="section-container">
       <div class="section__pic-container">
         <img src="./assets/worker-2.png" alt="Profile picture" class="about-pic" />
