--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
     </div>
   </section>
   <section id="skills">
-    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; font-size: 30px;">
+    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">
       Explore</p>
-    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; ">My Skills</h1>
+    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">My Skills</h1>
     <div class="experience-details-container">
       <div class="about-containers">
         <div class="details-container" class="all-browsers"
@@ -284,9 +284,9 @@
     </div>
   </section>
   <section id="experience">
-    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; font-size: 30px;">
+    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">
       Explore My</p>
-    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; ">Experience</h1>
+    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">Experience</h1>
     <div class="experience-details-container">
       <div class="about-containers">
         <div class="details-container"
@@ -338,9 +338,9 @@
   </section>
 
   <section id="projects">
-    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; font-size: 20px;">
+    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">
       Browse My Recent</p>
-    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; ">Projects</h1>
+    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">Projects</h1>
     <div class="experience-details-container">
       <div class="about-containers"
         style="display:grid; grid-template-columns:auto auto; grid-gap: 15px; padding: 20px;">
@@ -451,9 +451,9 @@
   </section>
 
   <section id="certificate">
-    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; font-size: 30px;">
+    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">
       Awards &</p>
-    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; ">Certificates</h1>
+    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;"Certificates</h1>
     <div class="experience-details-container">
       <div class="about-containers"
         style="display:grid; grid-template-columns:auto auto auto; grid-gap: 15px; padding: 20px;">
@@ -522,9 +522,9 @@
 
 
   <section id="contact">
-    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; font-size: 30px;">Get
+    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">Get
       in Touch</p>
-    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; ">Contact Me</h1>
+    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">Contact Me</h1>
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
         <img src="./assets/email.png" alt="Email icon" class="icon email-icon" />
