--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
   <section id="certificate">
     <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">
       Awards &</p>
-    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;"Certificates</h1>
+    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">Certificates</h1>
     <div class="experience-details-container">
       <div class="about-containers"
         style="display:grid; grid-template-columns:auto auto auto; grid-gap: 15px; padding: 20px;">
