--- a/index.html
+++ b/index.html
@@ -158,15 +158,14 @@
         <div class="text-container">
           <p>
 
-            ● Executed end-to-end ML projects involving data cleaning and preprocessing efficiency by 20%.<br>
-            ● Conducted exploratory data analysis (EDA) on diverse datasets, enhancing insights and predictive
-            capabilities.<br>
-            ● Developed and fine-tuned ML models including linear regression, logistic regression, decision trees, and
-            random forests
-            with 90% accuracy.<br>
-            ● Accomplished end-to-end ML project which will predict the flight ticket price on various factors.<br>
-            ● Implemented various ML models and Django framework to do prediction with 90% accuracy.<br>
-            ● Maximized Python libraries (Pandas, NumPy, Matplotlib, Seaborn, Sklearn) for robust analysis.
+            ⏩ Recent graduate in Computer Science with a passion for Data Science.<br>
+            ⏩ Strong foundation in data analysis and visualization techniques.<br>
+            ⏩ Proficient in Python, Excel, SQL, Power bi and Statistics tools for extracting valuable insights.<br>
+            ⏩ Fluent in English with strong communication and writing skills.<br>
+            ⏩ Eager to apply knowledge and contribute to data-driven decision-making processes.<br>
+            ⏩ Seeking opportunities to make a meaningful impact in an organization through analytical skills.<br>
+            ⏩ Enthusiastic about leveraging technology to drive efficient and informed decision-making.<br>
+            ⏩ Dedicated to continuous learning and staying updated on industry trends in Data Science.
           </p>
         </div>
       </div>
