--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             Vindra store wants to create an annual sales report for 2022....
           </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ambuj6392/Sales-Dashboard'">
               Github
             </button>
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-1.html');">
@@ -375,7 +375,7 @@
             Each hotel is now dealing with a number of issues as a....
           </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ambuj6392/Hotel-Booking-Project'">
               Github
             </button>
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-2.html');">
