--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
   </section>
 
   <section id="projects">
-   <!-- <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">
-      Browse My Recent</p> -->
+    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">
+      Browse My Recent</p> 
     <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">Projects</h1>
     <div class="experience-details-container">
       <div class="about-containers"
