--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <div class="about-containers">
         <div class="details-container" class="all-browsers"
           style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-          <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Hard Skills</u></h2>
+          <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Technical Skills</u></h2>
           <div class="article-container">
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
