--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <p style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue; font-size: 30px; color: black;">Data
         Analyst</p><br>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/AmbujResume... -.pdf')"
+        <button class="btn btn-color-2" onclick="window.open('./assets/Ambuj_Resume-@.pdf')"
           style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           Download Resume
         </button>
