--- a/index.html
+++ b/index.html
@@ -384,6 +384,30 @@
             <img src="./assets/python-logo.png" alt="My LinkedIn profile" class="icon" />
           </div>
         </div>
+
+
+        <div class="details-container color-container"
+          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          <div class="article-container">
+            <img src="./assets/Hotel_bookong.jpg" alt="Project 1" class="project-img" />
+          </div>
+          <h2>Hotel Summer Booking Dashboard</h2>
+          <p style="color: black;">A Vindra is a online store which sales different cloths categories through different
+            E-commerce channels. 
+            Vindra store wants to create an annual sales report for 2022....
+          </p><br>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ambuj6392/Sales-Dashboard'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-3.html');">
+              Live Demo
+            </button>
+
+            <img src="./assets/excel (1).png" alt="My LinkedIn profile" class="icon" />
+
+          </div>
+        </div>
         <!--
         <div class="details-container color-container"
           style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
