--- a/index.html
+++ b/index.html
@@ -397,11 +397,8 @@
             Vindra store wants to create an annual sales report for 2022....
           </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ambuj6392/Sales-Dashboard'">
-              Github
-            </button>
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-3.html');">
-              Live Demo
+              See My Work
             </button>
 
             <img src="./assets/excel (1).png" alt="My LinkedIn profile" class="icon" />
