--- a/project-3.html
+++ b/project-3.html
@@ -18,12 +18,11 @@
 <div class="details-container" style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
   <h1><u>Project Description</u></h1>
   <p style="text-align: left; color: #0d0d0d;font-family: 'Times New Roman', Times, serif; font-size: 25px;">
-    ⏩ Designed an interactive annual sales dashboard in Excel to enhance business insights and drive growth strategies for 
-    next year.<br> 
-    ⏩ Prepared insightful visualizations through diverse Excel charts, pivot tables, and Conditional formatting, leading to a 
-    30% increase in management's decision-making efficiency.  <br>
-    ⏩ Enabled stakeholders to make data-driven decisions and contributed to a strategic roadmap that projected a sales 
-    revenue increase of 20% for the upcoming year. 
+    ⏩ Developed a comprehensive “Hotel Booking Dashboard” using Power BI.<br> 
+    ⏩ Analyzed booking trends and cancellations using various graphs.  <br>
+    ⏩ Identified significant revenue loss in July and August due to high cancellation rates.<br>
+    ⏩ Highlighted an increase in average daily rates despite higher cancellations.<br>
+    ⏩ Provided actionable recommendations based on data insights to mitigate cancellations.
   </p>
 </div>
 
