--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
               See My Work
             </button>
 
-            <img src="./assets/excel (1).png" alt="My LinkedIn profile" class="icon" />
+            <img src="./assets/powerbi.png" alt="My LinkedIn profile" class="icon" />
 
           </div>
         </div>
