--- a/index.html
+++ b/index.html
@@ -392,9 +392,10 @@
             <img src="./assets/Hotel_bookong.jpg" alt="Project 1" class="project-img" />
           </div>
           <h2>Hotel Summer Booking Dashboard</h2>
-          <p style="color: black;">A Vindra is a online store which sales different cloths categories through different
-            E-commerce channels. 
-            Vindra store wants to create an annual sales report for 2022....
+          <p style="color: black;"> We have a hotel dataset containing Resort and City hotel data 
+            from 2015-2017, our central interest is to get insight from the 
+            year 2016 under resort hotel during the summer period (July & August). Although we will need to see insight on other 
+            months too.
           </p><br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-3.html');">
