--- a/project-3.html
+++ b/project-3.html
@@ -21,8 +21,7 @@
     ⏩ Developed a comprehensive “Hotel Booking Dashboard” using Power BI.<br> 
     ⏩ Analyzed booking trends and cancellations using various graphs.  <br>
     ⏩ Identified significant revenue loss in July and August due to high cancellation rates.<br>
-    ⏩ Highlighted an increase in average daily rates despite higher cancellations.<br>
-    ⏩ Provided actionable recommendations based on data insights to mitigate cancellations.
+    ⏩ Highlighted an increase in average daily rates despite higher cancellations.
   </p>
 </div>
 
