--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
           <p style="color: black;"> We have a hotel dataset containing Resort and City hotel data 
             from 2015-2017, our central interest is to get insight from the 
             year 2016 under resort hotel during the summer period (July & August). Although we will need to see insight on other 
-            months too.
+            months too...
           </p><br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-3.html');">
