--- a/project-3.html
+++ b/project-3.html
@@ -13,7 +13,7 @@
 <div class="details-container" style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
 <!--<iframe title="Report Section" width="1000" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiM2JiYTA1ZWItOGNjZi00NTMwLWFlMjItMWIxODU5NmFhM2Q3IiwidCI6IjAwYmFhNjkyLTRmYTQtNGQyYS04OTRlLWM3OTA1YzkwMTUwOCJ9" frameborder="0" allowFullScreen="true"></iframe> -->
 
-<iframe width="1000" height="600" frameborder="0" scrolling="no" src="https://app.powerbi.com/view?r=eyJrIjoiNDRmMDJjY2QtYWI3Yi00N2NlLWEzNjAtYzdhNTY0NGJjMzMwIiwidCI6IjAwYmFhNjkyLTRmYTQtNGQyYS04OTRlLWM3OTA1YzkwMTUwOCJ9"></iframe>
+<iframe width="1000" height="550" frameborder="0" scrolling="no" src="https://app.powerbi.com/view?r=eyJrIjoiNDRmMDJjY2QtYWI3Yi00N2NlLWEzNjAtYzdhNTY0NGJjMzMwIiwidCI6IjAwYmFhNjkyLTRmYTQtNGQyYS04OTRlLWM3OTA1YzkwMTUwOCJ9"></iframe>
 </div>
 <div class="details-container" style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
   <h1><u>Project Description</u></h1>
@@ -21,7 +21,8 @@
     ⏩ Developed a comprehensive “Hotel Booking Dashboard” using Power BI.<br> 
     ⏩ Analyzed booking trends and cancellations using various graphs.  <br>
     ⏩ Identified significant revenue loss in July and August due to high cancellation rates.<br>
-    ⏩ Highlighted an increase in average daily rates despite higher cancellations.
+    ⏩ Highlighted an increase in average daily rates despite higher cancellations.<br>
+    ⏩ Provided actionable recommendations based on data insights to mitigate cancellations.
   </p>
 </div>
 
