--- a/index.html
+++ b/index.html
@@ -389,13 +389,10 @@
         <div class="details-container color-container"
           style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
-            <img src="./assets/Hotel_bookong.jpg" alt="Project 1" class="project-img" />
+            <img src="./assets/Screenshot 2024-02-09 180400.jpg" alt="Project 1" class="project-img" />
           </div>
-          <h2>Hotel Summer Booking Dashboard</h2>
-          <p style="color: black;"> We have a hotel dataset containing Resort and City hotel data 
-            from 2015-2017, our central interest is to get insight from the 
-            year 2016 under resort hotel during the summer period (July & August). Although we will need to see insight on other 
-            months too...
+          <h2>Bank Loan Report</h2>
+          <p style="color: black;"> In our Bank Loan Report project, we aim to visually represent critical loan-related metrics and trends using a variety of chart types. These charts will provide a clear and insightful view of our lending operations, facilitating data-driven decision-making and enabling us to gain valuable insights into various loan parameters...
           </p><br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-3.html');">
