--- a/index.html
+++ b/index.html
@@ -403,6 +403,27 @@
 
           </div>
         </div>
+
+
+        <div class="details-container color-container"
+          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          <div class="article-container">
+            <img src="./assets/4650915.jpg" alt="Project 2" class="project-img" />
+          </div>
+          <h2>Best Bowler in test Cricket</h2>
+          <p style="color: black;">In recent years, City Hotel and Resort Hotel have seen high cancellation rates.
+            Each hotel is now dealing with a number of issues as a....
+          </p><br>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ambuj6392/Hotel-Booking-Project'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-4.html');">
+              Live Demo
+            </button>
+            <img src="./assets/python-logo.png" alt="My LinkedIn profile" class="icon" />
+          </div>
+        </div>
         <!--
         <div class="details-container color-container"
           style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
