--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         <div class="details-container color-container"
           style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
-            <img src="./assets/4650915.jpg" alt="Project 2" class="project-img" />
+            <img src="./assets/cricket.jpg" alt="Project 2" class="project-img" />
           </div>
           <h2>Best Bowler in test Cricket</h2>
           <p style="color: black;">In recent years, City Hotel and Resort Hotel have seen high cancellation rates.
