--- a/index.html
+++ b/index.html
@@ -411,8 +411,7 @@
             <img src="./assets/cricket.jpg" alt="Project 2" class="project-img" />
           </div>
           <h2>Best Bowler in test Cricket</h2>
-          <p style="color: black;">In recent years, City Hotel and Resort Hotel have seen high cancellation rates.
-            Each hotel is now dealing with a number of issues as a....
+          <p style="color: black;">In this project, I analyzed the best bowler in test cricket history based on various factors such as the most wicket-taker bowler, most matches played, economy rate, matches vs wickets, using Python and its libraries like Pandas, Matplotlib, Seaborn, and Plotly....
           </p><br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ambuj6392/Hotel-Booking-Project'">
