--- a/project-4.html
+++ b/project-4.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="mediaqueries.css" />
 </head>
 <body>
-    <h2 style="margin-left: 0px; text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; font-size: 25px;">Best Bowler in test Cricket history 🢃</h2>
+    <h2 style="margin-left: 0px; text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; font-size: 25px;">Best Bowler in Test Cricket history 🢃</h2>
 <div class="about-containers">
   <div class="details-container" style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
     <!--<iframe title="Report Section" width="1000" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiM2JiYTA1ZWItOGNjZi00NTMwLWFlMjItMWIxODU5NmFhM2Q3IiwidCI6IjAwYmFhNjkyLTRmYTQtNGQyYS04OTRlLWM3OTA1YzkwMTUwOCJ9" frameborder="0" allowFullScreen="true"></iframe> -->
