--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
           </div>
           <h2>Hotel Booking Analysis</h2>
           <p style="color: black;">In recent years, City Hotel and Resort Hotel have seen high cancellation rates.
-            Each hotel is now dealing with a number of issues as a....
+            Each hotel is now dealing with a number of issues as a result, including fewer revenues and less than ideal hotel room use....
           </p><br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ambuj6392/Hotel-Booking-Project'">
