--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@
             </button>
 
             <img src="./assets/powerbi.png" alt="My LinkedIn profile" class="icon" />
+            <img src="./assets/pngwing.com (1).png" alt="My LinkedIn profile" class="icon" />
 
           </div>
         </div>
