--- a/index.html
+++ b/index.html
@@ -354,11 +354,8 @@
             Vindra store wants to create an annual sales report for 2022....
           </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ambuj6392/Sales-Dashboard'">
-              Github
-            </button>
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-1.html');">
-              Live Demo
+              See My Work
             </button>
 
             <img src="./assets/excel (1).png" alt="My LinkedIn profile" class="icon" />
@@ -375,11 +372,8 @@
             Each hotel is now dealing with a number of issues as a result, including fewer revenues....
           </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ambuj6392/Hotel-Booking-Project'">
-              Github
-            </button>
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-2.html');">
-              Live Demo
+              See My Work
             </button>
             <img src="./assets/python-logo.png" alt="My LinkedIn profile" class="icon" />
           </div>
@@ -415,11 +409,8 @@
           <p style="color: black;">In this project, I analyzed the best bowler in test cricket history based on various factors such as the most wicket-taker bowler, most matches played, economy rate, matches vs wickets, using Python and its libraries like Pandas, Matplotlib, Seaborn, and Plotly....
           </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ambuj6392/Hotel-Booking-Project'">
-              Github
-            </button>
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-4.html');">
-              Live Demo
+              See My Work
             </button>
             <img src="./assets/python-logo.png" alt="My LinkedIn profile" class="icon" />
           </div>
