--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
           </p><br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-1.html');">
-              See My Work
+              Live Project
             </button>
 
             <img src="./assets/excel (1).png" alt="My LinkedIn profile" class="icon" />
@@ -373,7 +373,7 @@
           </p><br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-2.html');">
-              See My Work
+              Live Project
             </button>
             <img src="./assets/python-logo.png" alt="My LinkedIn profile" class="icon" />
           </div>
@@ -390,7 +390,7 @@
           </p><br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-3.html');">
-              See My Work
+              Live Project
             </button>
 
             <img src="./assets/powerbi.png" alt="My LinkedIn profile" class="icon" />
@@ -410,7 +410,7 @@
           </p><br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-4.html');">
-              See My Work
+              Live Project
             </button>
             <img src="./assets/python-logo.png" alt="My LinkedIn profile" class="icon" />
           </div>
