--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-4.html');">
               Live Project
             </button>
-            <img src="./assets/python-logo.png" alt="My LinkedIn profile" class="icon" />
+            <img src="./assets/python-logo.png" alt="My LinkedIn profile" class="icon" style="height: 120px;"/>
           </div>
         </div>
         <!--
