--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         <div class="details-container color-container"
           style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
-            <img src="./assets/Hotel.jpg" alt="Project 2" class="project-img" />
+            <img src="./assets/Hotel.jpg" alt="Project 2" class="project-img" style="height: 340px;"/>
           </div>
           <h2>Hotel Booking Analysis</h2>
           <p style="color: black;">In recent years, City Hotel and Resort Hotel have seen high cancellation rates.
@@ -386,7 +386,7 @@
             <img src="./assets/Screenshot 2024-02-09 180400.jpg" alt="Project 1" class="project-img" />
           </div>
           <h2>Bank Loan Report</h2>
-          <p style="color: black;"> In our Bank Loan Report project, we aim to visually represent critical loan-related metrics and trends using a variety of chart types. These charts will provide a clear and insightful view of our lending operations, facilitating data-driven decision-making and enabling us to gain valuable insights into various loan parameters...
+          <p style="color: black;"> In our Bank Loan Report project, we aim to visually represent critical loan-related metrics and trends using a variety of chart types. These charts will provide a clear and insightful view of our lending operations, facilitating data-driven decision-making and enabling us to gain valuable insights...
           </p><br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-3.html');">
@@ -403,7 +403,7 @@
         <div class="details-container color-container"
           style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
-            <img src="./assets/cricket.jpg" alt="Project 2" class="project-img" />
+            <img src="./assets/cricket.jpg" alt="Project 2" class="project-img" style="height: 300px;"/>
           </div>
           <h2>Best Bowler in test Cricket</h2>
           <p style="color: black;">In this project, I analyzed the best bowler in test cricket history based on various factors such as the most wicket-taker bowler, most matches played, economy rate, matches vs wickets, using Python and its libraries like Pandas, Matplotlib, Seaborn, and Plotly....
@@ -412,7 +412,7 @@
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-4.html');">
               Live Project
             </button>
-            <img src="./assets/python-logo.png" alt="My LinkedIn profile" class="icon" style="height: 120px;"/>
+            <img src="./assets/python-logo.png" alt="My LinkedIn profile" class="icon" />
           </div>
         </div>
         <!--
