--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         <div class="details-container color-container"
           style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
-            <img src="./assets/Hotel.jpg" alt="Project 2" class="project-img" style="height: 340px;"/>
+            <img src="./assets/Hotel.jpg" alt="Project 2" class="project-img" />
           </div>
           <h2>Hotel Booking Analysis</h2>
           <p style="color: black;">In recent years, City Hotel and Resort Hotel have seen high cancellation rates.
@@ -403,7 +403,7 @@
         <div class="details-container color-container"
           style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
-            <img src="./assets/cricket.jpg" alt="Project 2" class="project-img" style="height: 300px;"/>
+            <img src="./assets/cricket.jpg" alt="Project 2" class="project-img" />
           </div>
           <h2>Best Bowler in test Cricket</h2>
           <p style="color: black;">In this project, I analyzed the best bowler in test cricket history based on various factors such as the most wicket-taker bowler, most matches played, economy rate, matches vs wickets, using Python and its libraries like Pandas, Matplotlib, Seaborn, and Plotly....
