--- a/index.html
+++ b/index.html
@@ -346,12 +346,12 @@
         <div class="details-container color-container"
           style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
-            <img src="./assets/vindra-excel.jpg" alt="Project 1" class="project-img" />
+            <img src="./assets/Screenshot 2024-02-10 155307.jpg" alt="Project 1" class="project-img" />
           </div>
-          <h2>Sales Dashboard</h2>
+          <h2>Anual Sales Dashboard</h2>
           <p style="color: black;">A Vindra is a online store which sales different cloths categories through different
             E-commerce channels. 
-            Vindra store wants to create an annual sales report for 2022....
+            Vindra store wants to create an annual sales report for 2022 So that, Vindra can understand their existing customers and grow more sales in 2023.....
           </p><br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-1.html');">
@@ -359,23 +359,47 @@
             </button>
 
             <img src="./assets/excel (1).png" alt="My LinkedIn profile" class="icon" />
+            <img src="./assets/Microsoft Powerpoint Logo Vector.png" alt="My LinkedIn profile" class="icon" />
 
           </div>
         </div>
+
+        <div class="details-container color-container"
+        style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+        <div class="article-container">
+          <img src="./assets/Screenshot 2024-02-10 155211.jpg" alt="Project 1" class="project-img" />
+        </div>
+        <h2>Bank Loan Report</h2>
+        <p style="color: black;"> In our Bank Loan Report project, we aim to visually represent critical loan-related metrics and trends using a variety of chart types. These charts will provide a clear and insightful view of our lending operations, facilitating data-driven decision-making...
+        </p><br>
+        <div class="btn-container">
+          <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-3.html');">
+            Live Project
+          </button>
+
+          <img src="./assets/powerbi.png" alt="My LinkedIn profile" class="icon" />
+          <img src="./assets/pngwing.com (1).png" alt="My LinkedIn profile" class="icon" />
+          <img src="./assets/Microsoft Powerpoint Logo Vector.png" alt="My LinkedIn profile" class="icon" />
+
+        </div>
+      </div>
+
         <div class="details-container color-container"
           style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
-            <img src="./assets/Hotel.jpg" alt="Project 2" class="project-img" />
+            <img src="./assets/10811.jpg" alt="Project 2" class="project-img" />
           </div>
           <h2>Hotel Booking Analysis</h2>
           <p style="color: black;">In recent years, City Hotel and Resort Hotel have seen high cancellation rates.
-            Each hotel is now dealing with a number of issues as a result, including fewer revenues....
+            Each hotel is now dealing with a number of issues as a result,including fewer revenues and less than ideal hotel room use...
           </p><br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-2.html');">
               Live Project
             </button>
             <img src="./assets/python-logo.png" alt="My LinkedIn profile" class="icon" />
+            <img src="./assets/Pandas.png" alt="My LinkedIn profile" class="icon" />
+            <img src="./assets/seaborn Logo Vector.png" alt="My LinkedIn profile" class="icon" />
           </div>
         </div>
 
@@ -383,36 +407,19 @@
         <div class="details-container color-container"
           style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
-            <img src="./assets/Screenshot 2024-02-09 180400.jpg" alt="Project 1" class="project-img" />
+            <img src="./assets/4650915.jpg" alt="Project 2" class="project-img" />
           </div>
-          <h2>Bank Loan Report</h2>
-          <p style="color: black;"> In our Bank Loan Report project, we aim to visually represent critical loan-related metrics and trends using a variety of chart types. These charts will provide a clear and insightful view of our lending operations, facilitating data-driven decision-making and enabling us to gain valuable insights...
-          </p><br>
-          <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-3.html');">
-              Live Project
-            </button>
-
-            <img src="./assets/powerbi.png" alt="My LinkedIn profile" class="icon" />
-            <img src="./assets/pngwing.com (1).png" alt="My LinkedIn profile" class="icon" />
-
-          </div>
-        </div>
-
-
-        <div class="details-container color-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-          <div class="article-container">
-            <img src="./assets/cricket.jpg" alt="Project 2" class="project-img" />
-          </div>
-          <h2>Best Bowler in test Cricket</h2>
-          <p style="color: black;">In this project, I analyzed the best bowler in test cricket history based on various factors such as the most wicket-taker bowler, most matches played, economy rate, matches vs wickets, using Python and its libraries like Pandas, Matplotlib, Seaborn, and Plotly....
+          <br/>
+          <h2>Best Bowler in Test Cricket</h2>
+          <p style="color: black;">In this project, I analyzed the best bowler in test cricket history based on various factors such as the most wicket-taker bowler, most matches played, economy rate, matches vs wickets, using Python and its libraries like Pandas, Matplotlib, Seaborn....
           </p><br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-4.html');">
               Live Project
             </button>
             <img src="./assets/python-logo.png" alt="My LinkedIn profile" class="icon" />
+            <img src="./assets/Pandas.png" alt="My LinkedIn profile" class="icon" />
+            <img src="./assets/seaborn Logo Vector.png" alt="My LinkedIn profile" class="icon" />
           </div>
         </div>
         <!--
