--- a/index.html
+++ b/index.html
@@ -277,6 +277,18 @@
                 <h3>Problem solving</h3>
               </div>
             </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h3> Multitasking</h3>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
+                <h3>Work independently</h3>
+              </div>
+            </article>
           </div>
         </div>
       </div>
