--- a/index.html
+++ b/index.html
@@ -144,28 +144,25 @@
             style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
             <img src="./assets/experience.png" alt="Experience icon" class="icon" />
             <h3>Experience</h3>
-            <p style="color: #0d0d0d;font-family: 'Times New Roman', Times, serif; font-size: 20px;">1 year
+            <p style="color: #0d0d0d;font-family: 'Times New Roman', Times, serif; font-size: 20px;">Data Science Intern
               <br />Machine Learning Intern</p>
           </div>
           <div class="details-container"
             style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
             <img src="./assets/education.png" alt="Education icon" class="icon" />
             <h3>Education</h3>
-            <p style="color: #0d0d0d;font-family: 'Times New Roman', Times, serif; font-size: 20px;">B.C.A. Bachelors
-              Degree<br />M.C.A. Masters Degree</p>
+            <p style="color: #0d0d0d;font-family: 'Times New Roman', Times, serif; font-size: 20px;">M.C.A. Masters Degree<br />B.C.A. Bachelors Degree</p>
           </div>
         </div>
         <div class="text-container">
           <p>
-
-            ⏩ Recent graduate in Computer Science with a passion for Data Science.<br>
-            ⏩ Strong foundation in data analysis and visualization techniques.<br>
-            ⏩ Proficient in Python, Excel, SQL, Power bi and Statistics tools for extracting valuable insights.<br>
-            ⏩ Fluent in English with strong communication and writing skills.<br>
-            ⏩ Eager to apply knowledge and contribute to data-driven decision-making processes.<br>
-            ⏩ Seeking opportunities to make a meaningful impact in an organization through analytical skills.<br>
-            ⏩ Enthusiastic about leveraging technology to drive efficient and informed decision-making.<br>
-            ⏩ Dedicated to continuous learning and staying updated on industry trends in Data Science.
+            ⏩ As a Data Analyst with a Master's in Computer Applications (MCA) and a Bachelor's in Computer Applications (BCA), I bring a blend of academic rigor and practical expertise to the table. Proficient in Python, SQL, Excel, and Power BI, I have honed my skills through hands-on experience in various internships and projects.<br>
+            <br>
+            ⏩ I have completed several internships in data science and machine learning, where I worked on various projects spanning the spectrum of machine learning applications.<br>
+            <br>
+            ⏩ My projects underscore my proficiency in leveraging data to drive actionable outcomes. From crafting an Excel sales dashboard, optimizing hotel reservation strategies, to analyzing bank loan trends, I have consistently delivered impactful insights and solutions.<br>
+            <br>
+            ⏩ Certified in SQL, Python, and Machine Learning, I am committed to continuous learning and growth. Now, I am actively seeking new job opportunities where I can apply my skills, contribute to meaningful projects, and continue my journey of professional development in the field of data analytics.<br>
           </p>
         </div>
       </div>
@@ -315,12 +312,12 @@
 
 
             <p style="font-size:20px; color:#0d0d0d;">
-              ⏩ Executed end-to-end ML projects involving data cleaning and preprocessing efficiency by 20%.<br>
-              ⏩ Conducted exploratory data analysis (EDA) on diverse datasets, enhancing insights and predictive
+              ⏩ Executed end-to-end ML projects involving data cleaning and preprocessing efficiency by 90%.<br>
+              ⏩ Conducted exploratory data analysis (4+ EDA) on diverse datasets, enhancing insights and predictive
               capabilities.<br>
               ⏩ Developed and fine-tuned ML models including linear regression, logistic regression, decision trees, and
               random forests
-              with 90% accuracy.
+              with 80% accuracy.
             </p>
 
 
