--- a/project-3.html
+++ b/project-3.html
@@ -18,11 +18,11 @@
 <div class="details-container" style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
   <h1><u>Project Description</u></h1>
   <p style="text-align: left; color: #0d0d0d;font-family: 'Times New Roman', Times, serif; font-size: 25px;">
-    ⏩ Developed a comprehensive “Hotel Booking Dashboard” using Power BI.<br> 
-    ⏩ Analyzed booking trends and cancellations using various graphs.  <br>
-    ⏩ Identified significant revenue loss in July and August due to high cancellation rates.<br>
-    ⏩ Highlighted an increase in average daily rates despite higher cancellations.<br>
-    ⏩ Provided actionable recommendations based on data insights to mitigate cancellations.
+    ⏩ Created a Bank Loan Report with 3 Dashboards Summary, Overview, and Details. Provided insights into loan applications, 
+    funded amounts, and repayments.<br> 
+    ⏩ Utilized Data Transformation, Data Modelling, Dax Queries, and diverse charts to represent loan trends.  <br>
+    ⏩ Enabling data-driven decision-making and trend identification potentially leads to a 10% reduction in loan processing time.
+
   </p>
 </div>
 
