--- a/project-3.html
+++ b/project-3.html
@@ -20,7 +20,7 @@
   <p style="text-align: left; color: #0d0d0d;font-family: 'Times New Roman', Times, serif; font-size: 25px;">
     ⏩ Created a Bank Loan Report with 3 Dashboards Summary, Overview, and Details. Provided insights into loan applications, 
     funded amounts, and repayments.<br> 
-    ⏩ Utilized Data Transformation, Data Modelling, Dax Queries, and diverse charts to represent loan trends.  <br>
+    ⏩ Utilized Data Power Query Editor, Data Modelling, Dax Queries, and diverse charts to represent loan trends.  <br>
     ⏩ Enabling data-driven decision-making and trend identification potentially leads to a 10% reduction in loan processing time.
 
   </p>
