--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 </head>
 
-<body>
+<body style="background-color: #cce6ff;">
 
   <nav id="desktop-nav">
 
@@ -141,14 +141,14 @@
       <div class="about-details-container">
         <div class="about-containers">
           <div class="details-container"
-            style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+            style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
             <img src="./assets/experience.png" alt="Experience icon" class="icon" />
             <h3>Experience</h3>
             <p style="color: #0d0d0d;font-family: 'Times New Roman', Times, serif; font-size: 20px;">Data Science Intern
               <br />Machine Learning Intern</p>
           </div>
           <div class="details-container"
-            style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+            style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
             <img src="./assets/education.png" alt="Education icon" class="icon" />
             <h3>Education</h3>
             <p style="color: #0d0d0d;font-family: 'Times New Roman', Times, serif; font-size: 20px;">M.C.A. Masters Degree<br />B.C.A. Bachelors Degree</p>
@@ -175,7 +175,7 @@
     <div class="experience-details-container">
       <div class="about-containers">
         <div class="details-container" class="all-browsers"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Technical Skills</u></h2>
           <div class="article-container">
             <article>
@@ -235,7 +235,7 @@
           </div>
         </div>
         <div class="details-container" class="all-browsers"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Soft Skills</u></h2>
           <div class="article-container">
             <article>
@@ -298,7 +298,7 @@
     <div class="experience-details-container">
       <div class="about-containers">
         <div class="details-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
 
           <h2 class="experience-sub-title" style="color: #0d0d0d;">
             <img src="./assets/office.png" alt="Experience icon" class="icon" />
@@ -325,7 +325,7 @@
           </div>
         </div>
         <div class="details-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <h2 class="experience-sub-title" style="color: #0d0d0d;">
             <img src="./assets/office.png" alt="Experience icon" class="icon" />
 
@@ -353,7 +353,7 @@
       <div class="about-containers"
         style="display:grid; grid-template-columns:auto auto; grid-gap: 15px; padding: 20px;">
         <div class="details-container color-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
             <img src="./assets/Screenshot 2024-02-10 155307.jpg" alt="Project 1" class="project-img" />
           </div>
@@ -374,7 +374,7 @@
         </div>
 
         <div class="details-container color-container"
-        style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+        style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
         <div class="article-container">
           <img src="./assets/Screenshot 2024-02-10 155211.jpg" alt="Project 1" class="project-img" />
         </div>
@@ -394,7 +394,7 @@
       </div>
 
         <div class="details-container color-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
             <img src="./assets/10811.jpg" alt="Project 2" class="project-img" />
           </div>
@@ -414,7 +414,7 @@
 
 
         <div class="details-container color-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
             <img src="./assets/4650915.jpg" alt="Project 2" class="project-img" />
           </div>
@@ -431,6 +431,25 @@
             <img src="./assets/seaborn Logo Vector.png" alt="My LinkedIn profile" class="icon" />
           </div>
         </div>
+
+
+
+        <div class="details-container color-container"
+        style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+        <div class="article-container">
+          <img src="./assets/USA Travel.jpg" alt="Project 1" class="project-img" />
+        </div>
+        <h2>USA International Trave dashboard</h2>
+         <br>
+        <div class="btn-container">
+          <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-5.html');">
+            Live Project
+          </button>
+
+          <img src="./assets/powerbi.png" alt="My LinkedIn profile" class="icon" />
+
+        </div>
+      </div>
         <!--
         <div class="details-container color-container"
           style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
@@ -506,7 +525,7 @@
       <div class="about-containers"
         style="display:grid; grid-template-columns:auto auto auto; grid-gap: 15px; padding: 20px;">
         <div class="details-container color-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
             <img src="./assets/python.jpg" alt="Project 1" class="certificate-img" />
           </div>
@@ -514,50 +533,50 @@
 
         </div>
         <div class="details-container color-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
             <img src="./assets/python-ml.jpg" alt="Project 2" class="certificate-img" />
           </div>
         </div>
 
         <div class="details-container color-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
             <img src="./assets/sql.png" alt="Project 3" class="certificate-img" />
           </div>
         </div>
         <div class="details-container color-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
             <img src="./assets/problem-solving.jpg" alt="Project 3" class="certificate-img" />
           </div>
         </div>
         <div class="details-container color-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
             <img src="./assets/python-cisco.jpg" alt="Project 3" class="certificate-img" />
           </div>
         </div>
         <div class="details-container color-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
             <img src="./assets/GFG.jpg" alt="Project 3" class="certificate-img" />
           </div>
         </div>
         <div class="details-container color-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
             <img src="./assets/codechef.jpg" alt="Project 3" class="certificate-img" />
           </div>
         </div>
         <div class="details-container color-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
             <img src="./assets/python zero to mastery.jpg" alt="Project 3" class="certificate-img" />
           </div>
         </div>
         <div class="details-container color-container"
-          style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
             <img src="./assets/python-basic.png" alt="Project 3" class="certificate-img" />
           </div>
