--- a/index.html
+++ b/index.html
@@ -44,6 +44,37 @@
 
     }
 
+    .typewriter h1 {
+  font-family: 'Titillium Web';
+  margin: 0 auto;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: .17em solid pink;
+  animation: typing 3.5s steps(50, end) 0s infinite alternate, blinking-cursor .5s step-end infinite;
+}
+
+@keyframes typing {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes blinking-cursor {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: black;
+  }
+}
+
+.typewriter h1:nth-child(2) {
+  animation-delay: 3.5s; /* Delay before starting the next animation */
+}
 
 
   
@@ -107,8 +138,9 @@
       <!-- <p class="section__text__p1">Hello, I'm</p> -->
       <h1 style="font-family:Segoe Print;">Hello I'm </h1>
       <h1 class="title">Ambuj Nayan Mishra</h1>
-      <p style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue; font-size: 30px; color: black;">Data
-        Analyst</p><br>
+      <div class="typewriter">
+        <h1 style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue; font-size: 30px; color: black;">Data Analyst</h1>
+      </div><br>
       <div class="btn-container">
         <button class="btn btn-color-2" onclick="window.open('./assets/Ambuj_Resume-@.pdf')"
           style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
