--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   overflow: hidden;
   white-space: nowrap;
   border-right: .17em solid pink;
-  animation: typing 3.5s steps(50, end) 0s infinite alternate, blinking-cursor .5s step-end infinite;
+  animation: typing 3.5s steps(40, end) 0s infinite alternate, blinking-cursor .5s step-end forwards;
 }
 
 @keyframes typing {
@@ -63,18 +63,15 @@
 }
 
 @keyframes blinking-cursor {
-  from,
-  to {
-    border-color: transparent;
+  0%, 100% {
+    border-color: black; /* Cursor is visible */
   }
   50% {
-    border-color: black;
+    border-color: transparent; /* Cursor blinks */
   }
 }
 
-.typewriter h1:nth-child(2) {
-  animation-delay: 3.5s; /* Delay before starting the next animation */
-}
+
 
 
   
