--- a/index.html
+++ b/index.html
@@ -44,33 +44,7 @@
 
     }
 
-    .typewriter h1 {
-  font-family: 'Titillium Web';
-  margin: 0 auto;
-  overflow: hidden;
-  white-space: nowrap;
-  border-right: .17em solid pink;
-  animation: typing 3.5s steps(40, end) 0s infinite alternate, blinking-cursor .5s step-end forwards;
-}
-
-@keyframes typing {
-  0% {
-    width: 0;
-  }
-  100% {
-    width: 100%;
-  }
-}
-
-@keyframes blinking-cursor {
-  0%, 100% {
-    border-color: black; /* Cursor is visible */
-  }
-  50% {
-    border-color: transparent; /* Cursor blinks */
-  }
-}
-
+ 
 
 
 
@@ -135,9 +109,11 @@
       <!-- <p class="section__text__p1">Hello, I'm</p> -->
       <h1 style="font-family:Segoe Print;">Hello I'm </h1>
       <h1 class="title">Ambuj Nayan Mishra</h1>
-      <div class="typewriter">
-        <h1 style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue; font-size: 40px; color: black;">Data Analyst</h1>
-      </div><br>
+      <h1>
+        <a href="" class="typewrite" data-period="2000" data-type='[ "Data Analyst", "Business Analyst"]' style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue; font-size: 40px; color: black;">
+          <span class="wrap"></span>
+        </a>
+      </h1><br>
       <div class="btn-container">
         <button class="btn btn-color-2" onclick="window.open('./assets/Ambuj_Resume-@.pdf')"
           style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
@@ -647,3 +623,62 @@
 </body>
 
 </html>
+
+<script>
+var TxtType = function(el, toRotate, period) {
+        this.toRotate = toRotate;
+        this.el = el;
+        this.loopNum = 0;
+        this.period = parseInt(period, 10) || 2000;
+        this.txt = '';
+        this.tick();
+        this.isDeleting = false;
+    };
+
+    TxtType.prototype.tick = function() {
+        var i = this.loopNum % this.toRotate.length;
+        var fullTxt = this.toRotate[i];
+
+        if (this.isDeleting) {
+        this.txt = fullTxt.substring(0, this.txt.length - 1);
+        } else {
+        this.txt = fullTxt.substring(0, this.txt.length + 1);
+        }
+
+        this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+        var that = this;
+        var delta = 200 - Math.random() * 100;
+
+        if (this.isDeleting) { delta /= 2; }
+
+        if (!this.isDeleting && this.txt === fullTxt) {
+        delta = this.period;
+        this.isDeleting = true;
+        } else if (this.isDeleting && this.txt === '') {
+        this.isDeleting = false;
+        this.loopNum++;
+        delta = 500;
+        }
+
+        setTimeout(function() {
+        that.tick();
+        }, delta);
+    };
+
+    window.onload = function() {
+        var elements = document.getElementsByClassName('typewrite');
+        for (var i=0; i<elements.length; i++) {
+            var toRotate = elements[i].getAttribute('data-type');
+            var period = elements[i].getAttribute('data-period');
+            if (toRotate) {
+              new TxtType(elements[i], JSON.parse(toRotate), period);
+            }
+        }
+        // INJECT CSS
+        var css = document.createElement("style");
+        css.type = "text/css";
+        css.innerHTML = ".typewrite > .wrap { border-right: .3em solid #000000}";
+        document.body.appendChild(css);
+    };
+</script>
