--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   
       <br>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/Ambuj_Resume-@.pdf')"
+        <button class="btn btn-color-2" onclick="window.open('./assets/Ambuj Resume.pdf')"
           style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           Download Resume
         </button>
